more UI changes

--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -13,10 +13,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/button_send"
+        android:background="@drawable/button_send_emergency"
         android:onClick="sendMessage"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
@@ -58,12 +58,10 @@
         android:layout_width="250dp"
         android:layout_height="85dp"
         android:layout_above="@+id/buttonSendEmergency"
-        android:layout_alignLeft="@+id/buttonSendEmergency"
-        android:layout_alignRight="@+id/buttonSendEmergency"
+        android:layout_alignLeft="@+id/spinnerEmergencyDialogs"
+        android:layout_alignRight="@+id/spinnerEmergencyDialogs"
         android:layout_below="@+id/spinnerEmergencyDialogs"
-        android:background="@drawable/text_border"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:background="@drawable/text_border_emergency"
         android:clickable="true"
         android:ems="20"
         android:hint="Click here to add an additional message"
