--- a/res/layout/activity_gesture_confirmation.xml
+++ b/res/layout/activity_gesture_confirmation.xml
@@ -10,11 +10,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:background="@drawable/text_border"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/text_border_emergency"
         android:gravity="center"
         android:padding="10dp"
         android:text="Trace the circle"
-        android:textColor="@color/cyan"
+        android:textColor="@color/werkred"
         android:textSize="25sp" />
 
     <android.gesture.GestureOverlayView
@@ -26,7 +27,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_weight="1.0"
-        android:background="@drawable/text_border" >
+        android:background="@drawable/text_border_emergency" >
 
         <View
             android:layout_width="280dp"
