--- a/res/drawable/button_share_my_location.xml
+++ b/res/drawable/button_share_my_location.xml
@@ -3,36 +3,26 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#EE4AAAA5" />
+                android:color="#EED8A027" />
             <stroke
                 android:width="1dp"
-                android:color="#474747" />
-            <corners
-        		android:bottomRightRadius="8dip"
-        		android:bottomLeftRadius="8dip"  
-   				android:topRightRadius="8dip"
-        		android:topLeftRadius="8dip" />
+                android:color="#D8A027" />
 
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#DE4AAAA5"
-                android:endColor="#DE57d8d2"
+                android:startColor="#DED8A027"
+                android:endColor="#DEecad26"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#00b4cc" />
+                android:color="#D8A027" />
             <size 
 				android:width="150dp"
 				android:height="30dp"
                 />
-            <corners
-                android:bottomRightRadius="8dip"
-        		android:bottomLeftRadius="8dip"  
-   				android:topRightRadius="8dip"
-        		android:topLeftRadius="8dip" />
 
         </shape>
     </item>
