--- a/res/menu/share_location_contacts.xml
+++ b/res/menu/share_location_contacts.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:icon="@drawable/ic_action_settings"
+        android:icon="@drawable/ic_settings"
         android:showAsAction="always"
         app:showAsAction="always"/>
     <item
