--- a/res/layout-land/activity_gesture_confirmation.xml
+++ b/res/layout-land/activity_gesture_confirmation.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/katiered" >
 
     <TextView
         android:id="@+id/meow"
@@ -10,11 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:background="@drawable/text_border"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/text_border_share_location"
         android:gravity="center"
         android:padding="10dp"
         android:text="Trace the circle"
-        android:textColor="@color/cyan"
+        android:textColor="@color/katiewhite"
+        android:textStyle="bold"
         android:textSize="20sp" />
 
     <android.gesture.GestureOverlayView
@@ -26,7 +29,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_weight="1.0"
-        android:background="@drawable/text_border" >
+        android:background="@drawable/text_border_share_location" >
 
         <View
             android:layout_width="180dp"
@@ -44,7 +47,8 @@
         android:layout_below="@+id/meow"
         android:gravity="center"
         android:text="Start at the top of the circle"
-        android:textColor="@color/red"
+        android:textColor="@color/katiewhite"
+        android:textStyle="bold"
         android:textSize="15sp" />
 
 </RelativeLayout>
