--- a/res/drawable/button_emergency.xml
+++ b/res/drawable/button_emergency.xml
@@ -3,22 +3,22 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#EED96459" />
+                android:color="#EE97282C" />
             <stroke
                 android:width="1dp"
-                android:color="#D96459" />
+                android:color="#97282C" />
 
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#DED96459"
-                android:endColor="#DEec6659"
+                android:startColor="#DE97282C"
+                android:endColor="#DE97282C"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#D96459" />
+                android:color="#97282C" />
             <size 
 				android:width="40dp"
 				android:height="40dp"
