--- a/res/drawable/button_send.xml
+++ b/res/drawable/button_send.xml
@@ -3,22 +3,22 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#EE00e2ff" />
+                android:color="#EEEBE6C5" />
             <stroke
                 android:width="1dp"
-                android:color="#00b4cc" />
+                android:color="#EBE6C5" />
 
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#DE00e2ff"
-                android:endColor="#DE00b4cc"
+                android:startColor="#DEEBE6C5"
+                android:endColor="#DEEBE6C5"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#00b4cc" />
+                android:color="#EBE6C5" />
             <size 
 				android:width="150dp"
 				android:height="30dp"
