--- a/res/drawable/button_send_share_location.xml
+++ b/res/drawable/button_send_share_location.xml
@@ -3,22 +3,22 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#EEffc490" />
+                android:color="#EEEBE6C5" />
             <stroke
                 android:width="1dp"
-                android:color="#F2AE72" />
+                android:color="#EBE6C5" />
 
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#DEffc490"
-                android:endColor="#DEF2AE72"
+                android:startColor="#DEEBE6C5"
+                android:endColor="#DEEBE6C5"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#F2AE72" />
+                android:color="#EBE6C5" />
             <size 
 				android:width="150dp"
 				android:height="30dp"
