--- a/res/drawable/text_border_share_location.xml
+++ b/res/drawable/text_border_share_location.xml
@@ -3,15 +3,15 @@
     <item>
       <shape 
         android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/werkorange" />
+            <stroke android:width="1.5dp" android:color="@color/katiewhite" />
 
         </shape>
    </item>
 
-   <item android:top="1dp" android:bottom="1dp"> 
+   <item android:top="1.5dp" android:bottom="1.5dp"> 
       <shape 
         android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/werkorange" />
+            <stroke android:width="1.5dp" android:color="@color/katiewhite" />
         </shape>
    </item>
 
