--- a/res/layout-land/activity_emergency.xml
+++ b/res/layout-land/activity_emergency.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/button_send"
         android:onClick="sendMessage"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/katiered"
         android:textStyle="bold"
         android:text="Send (requires confirmation)" />
 
@@ -101,14 +101,14 @@
         android:layout_width="250dp"
         android:layout_height="85dp"
         android:layout_above="@+id/buttonSendEmergency"
-        android:layout_alignLeft="@+id/buttonSendEmergency"
-        android:layout_alignRight="@+id/buttonSendEmergency"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/editEmergencyAddress"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/text_border"
+        android:background="@drawable/text_border_share_location"
         android:clickable="true"
         android:ems="20"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:hint="Click here to add an additional message"
         android:maxHeight="140dp"
         android:onClick="getAdditionalMessage"
