--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -13,8 +13,8 @@
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_height="wrap_content"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/text_view_title"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -26,10 +26,8 @@
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_above="@+id/button_share_my_location"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/button_emergency"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/strut"
         android:gravity="left"
         android:paddingBottom="4dp"
@@ -37,40 +35,36 @@
         android:paddingRight="8dp"
         android:paddingTop="4dp"
         android:scrollbars="vertical"
-        android:textColor="#FFFFFFFF"
-        android:textSize="17sp" />
+        android:textStyle="bold"
+        android:textColor="@color/katiewhite"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/button_emergency"
         android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="2.5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/strut"
         android:background="@drawable/button_emergency"
         android:onClick="getEmergency"
-        android:text="!"
-        android:textColor="#FFFFFFFF"
+        android:text="Help!"
         android:textStyle="bold"
+        android:textColor="@color/katiewhite"
         android:typeface="sans" />
 
     <Button
         android:id="@+id/button_share_my_location"
         android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:layout_above="@+id/button_emergency"
+        android:layout_alignLeft="@+id/button_emergency"
         android:layout_alignRight="@+id/text_view_title"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/map"
         android:background="@drawable/button_share_my_location"
         android:onClick="shareMyLocation"
-        android:text="@string/share_my_location"
-        android:textColor="#FFFFFFFF"
+        android:text="Share"
+        android:textStyle="bold"
+        android:textColor="@color/katiewhite"
         android:typeface="sans" />
 
 </RelativeLayout>
